# nscraper

./: .gitignore  LICENSE  README.md  build_backend.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/nscraper/: __init__.py  __main__.py  core.py  errors.py  logging.py  models.py  utils.py
src/nscraper/scraper/: __init__.py  base.py  http.py  seleniumbase.py
src/nscraper/utils/: __init__.py  cookies.py  headers.py  html.py  output.py  response_type.py  url.py
tests/: test_core.py  test_http_scraper.py  test_main.py  test_seleniumbase_scraper.py  test_utils.py
